# diverg

./: .envrc  .gitignore  .gitmodules  .ignore  AUTHORS  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  codemeta.json
benchmark/: CMakeLists.txt
benchmark/src/: rcrs_benchmark.cpp  rcrs_benchmark.hpp
cmake/: diverg-config.cmake.in
cmake/modules/: diverg_eti.cmake  diverg_eti_ordinals.cmake  diverg_utils.cmake
ext/: external.cmake
include/diverg/: adjacency.hpp  basic_types.hpp  basic_types.hpp.in  bits.hpp  config.hpp.in  crs_matrix.hpp  crs_matrix_device.hpp  dindex.hpp  dindex_eti.hpp  eti_macros.hpp  hbitvector.hpp  random.hpp  range_sparse.hpp  range_sparse_base.hpp  range_sparse_utils.hpp  runtime.hpp  utils.hpp
include/diverg/eti/: crs_matrix.hpp  hbitvector.hpp  range_sparse.hpp
include/diverg/impl/: basic_types_impl.hpp  basic_types_spec.hpp
scripts/: dot2gfa.py  plot_performance.R
src/: CMakeLists.txt
src/basic_types/eti/: DiverGRangeIterator_eti_spec_inst.cpp.in
src/eti/: crs_matrix.cpp  dindex.cpp  hbitvector.cpp  hbitvector_cuda.cpp  range_sparse.cpp  range_sparse_cuda.cpp  runtime.cpp
test/: CMakeLists.txt
test/src/: test_base.hpp  test_config.hpp.in  test_crsmatrix.cpp  test_dindex.cpp  test_hbitvector.cpp  test_main.cpp  test_range_sparse.cpp
